# benchtools

./: Makefile.am  PackageInfo.g  README.md  autogen.sh  configure.ac  init.g  makedoc.g  read.g
gap/: benchtools.gd  benchtools.gi
src/: benchtools.cc
tst/: testall.g
